@@ -1035,9 +1035,10 @@ $cfg['DisplayBinaryAsHex'] = true;
 /**
  * disallow editing of binary fields
  * valid values are:
- *   false  allow editing
- *   'blob' allow editing except for BLOB fields
- *   'all'  disallow editing
+ *   false    allow editing
+ *   'blob'   allow editing except for BLOB fields
+ *   'noblob' disallow editing except for BLOB fields
+ *   'all'    disallow editing
  *
  * @global string $cfg['ProtectBinary']
  */
